run and extra cell for download/install

--- a/KDD-2024/Notebooks/part2_distance_based.ipynb
+++ b/KDD-2024/Notebooks/part2_distance_based.ipynb
@@ -45,11 +45,29 @@
    ]
   },
   {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "!pip install aeon==0.11.0\n",
+    "!mkdir -p data\n",
+    "!wget -nc https://raw.githubusercontent.com/aeon-tutorials/KDD-2024/main/Notebooks/data/KDD_MTSC_TRAIN.ts -P data/\n",
+    "!wget -nc https://raw.githubusercontent.com/aeon-tutorials/KDD-2024/main/Notebooks/data/KDD_MTSC_TEST.ts -P data/\n",
+    "!wget -nc https://raw.githubusercontent.com/aeon-tutorials/KDD-2024/main/Notebooks/data/KDD_UTSC_TRAIN.ts -P data/\n",
+    "!wget -nc https://raw.githubusercontent.com/aeon-tutorials/KDD-2024/main/Notebooks/data/KDD_UTSC_TEST.ts -P data/\n",
+    "!wget -nc https://raw.githubusercontent.com/aeon-tutorials/KDD-2024/main/Notebooks/data/KDD_MTSER_TRAIN.ts -P data/\n",
+    "!wget -nc https://raw.githubusercontent.com/aeon-tutorials/KDD-2024/main/Notebooks/data/KDD_MTSER_TEST.ts -P data/\n",
+    "!wget -nc https://raw.githubusercontent.com/aeon-tutorials/KDD-2024/main/Notebooks/data/KDD_UTSER_TRAIN.ts -P data/\n",
+    "!wget -nc https://raw.githubusercontent.com/aeon-tutorials/KDD-2024/main/Notebooks/data/KDD_UTSER_TEST.ts -P data/"
+   ]
+  },
+  {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:39:21.239939Z",
-     "start_time": "2024-08-23T15:39:21.234447Z"
+     "end_time": "2024-08-24T20:10:01.638350Z",
+     "start_time": "2024-08-24T20:10:01.634360Z"
     }
    },
    "source": [
@@ -61,14 +79,14 @@
     "warnings.filterwarnings(\"ignore\")"
    ],
    "outputs": [],
-   "execution_count": 23
+   "execution_count": 1
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:39:21.894651Z",
-     "start_time": "2024-08-23T15:39:21.530625Z"
+     "end_time": "2024-08-24T20:10:32.256089Z",
+     "start_time": "2024-08-24T20:10:01.909406Z"
     }
    },
    "source": [
@@ -143,20 +161,20 @@
        "</div>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 24
+   "execution_count": 2
   },
   {
    "cell_type": "code",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:39:21.950501Z",
-     "start_time": "2024-08-23T15:39:21.895649Z"
+     "end_time": "2024-08-24T20:10:32.307971Z",
+     "start_time": "2024-08-24T20:10:32.257086Z"
     }
    },
    "source": [
@@ -208,12 +226,12 @@
        "</div>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 25
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -223,8 +241,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:39:21.962470Z",
-     "start_time": "2024-08-23T15:39:21.951499Z"
+     "end_time": "2024-08-24T20:10:32.324905Z",
+     "start_time": "2024-08-24T20:10:32.308947Z"
     }
    },
    "cell_type": "code",
@@ -248,13 +266,13 @@
      ]
     }
    ],
-   "execution_count": 26
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:39:21.985408Z",
-     "start_time": "2024-08-23T15:39:21.964464Z"
+     "end_time": "2024-08-24T20:10:32.349603Z",
+     "start_time": "2024-08-24T20:10:32.326899Z"
     }
    },
    "cell_type": "code",
@@ -276,13 +294,13 @@
      ]
     }
    ],
-   "execution_count": 27
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:39:21.999371Z",
-     "start_time": "2024-08-23T15:39:21.986405Z"
+     "end_time": "2024-08-24T20:10:32.363564Z",
+     "start_time": "2024-08-24T20:10:32.351597Z"
     }
    },
    "cell_type": "code",
@@ -304,13 +322,13 @@
      ]
     }
    ],
-   "execution_count": 28
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:39:22.023307Z",
-     "start_time": "2024-08-23T15:39:22.000368Z"
+     "end_time": "2024-08-24T20:10:32.390492Z",
+     "start_time": "2024-08-24T20:10:32.364562Z"
     }
    },
    "cell_type": "code",
@@ -332,7 +350,7 @@
      ]
     }
    ],
-   "execution_count": 29
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -347,8 +365,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:39:22.209837Z",
-     "start_time": "2024-08-23T15:39:22.024304Z"
+     "end_time": "2024-08-24T20:10:33.601398Z",
+     "start_time": "2024-08-24T20:10:32.391489Z"
     }
    },
    "source": [
@@ -376,7 +394,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 30
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
@@ -397,8 +415,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:39:22.214795Z",
-     "start_time": "2024-08-23T15:39:22.210836Z"
+     "end_time": "2024-08-24T20:10:33.606384Z",
+     "start_time": "2024-08-24T20:10:33.602395Z"
     }
    },
    "source": [
@@ -417,7 +435,7 @@
      ]
     }
    ],
-   "execution_count": 31
+   "execution_count": 9
   },
   {
    "cell_type": "markdown",
@@ -431,8 +449,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:39:22.219806Z",
-     "start_time": "2024-08-23T15:39:22.214795Z"
+     "end_time": "2024-08-24T20:10:33.766206Z",
+     "start_time": "2024-08-24T20:10:33.607382Z"
     }
    },
    "source": [
@@ -452,7 +470,7 @@
      ]
     }
    ],
-   "execution_count": 32
+   "execution_count": 10
   },
   {
    "cell_type": "markdown",
@@ -466,8 +484,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:39:22.437228Z",
-     "start_time": "2024-08-23T15:39:22.221776Z"
+     "end_time": "2024-08-24T20:10:34.030397Z",
+     "start_time": "2024-08-24T20:10:33.768202Z"
     }
    },
    "source": [
@@ -523,7 +541,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 33
+   "execution_count": 11
   },
   {
    "cell_type": "markdown",
@@ -541,8 +559,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:39:22.943208Z",
-     "start_time": "2024-08-23T15:39:22.437228Z"
+     "end_time": "2024-08-24T20:10:35.620770Z",
+     "start_time": "2024-08-24T20:10:34.040371Z"
     }
    },
    "source": [
@@ -567,7 +585,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 34
+   "execution_count": 12
   },
   {
    "cell_type": "markdown",
@@ -587,8 +605,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:39:22.950185Z",
-     "start_time": "2024-08-23T15:39:22.944201Z"
+     "end_time": "2024-08-24T20:10:35.691580Z",
+     "start_time": "2024-08-24T20:10:35.623763Z"
     }
    },
    "source": [
@@ -608,7 +626,7 @@
      ]
     }
    ],
-   "execution_count": 35
+   "execution_count": 13
   },
   {
    "cell_type": "markdown",
@@ -621,8 +639,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:39:23.186571Z",
-     "start_time": "2024-08-23T15:39:22.951182Z"
+     "end_time": "2024-08-24T20:10:35.976481Z",
+     "start_time": "2024-08-24T20:10:35.692577Z"
     }
    },
    "source": [
@@ -657,7 +675,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 36
+   "execution_count": 14
   },
   {
    "cell_type": "markdown",
@@ -679,8 +697,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:39:23.592994Z",
-     "start_time": "2024-08-23T15:39:23.187568Z"
+     "end_time": "2024-08-24T20:10:36.327129Z",
+     "start_time": "2024-08-24T20:10:35.977469Z"
     }
    },
    "source": [
@@ -712,7 +730,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 37
+   "execution_count": 15
   },
   {
    "cell_type": "markdown",
@@ -734,8 +752,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:39:24.015147Z",
-     "start_time": "2024-08-23T15:39:23.594013Z"
+     "end_time": "2024-08-24T20:10:37.068361Z",
+     "start_time": "2024-08-24T20:10:36.327129Z"
     }
    },
    "source": [
@@ -769,7 +787,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 38
+   "execution_count": 16
   },
   {
    "cell_type": "markdown",
@@ -783,8 +801,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:39:24.459957Z",
-     "start_time": "2024-08-23T15:39:24.015147Z"
+     "end_time": "2024-08-24T20:10:37.597814Z",
+     "start_time": "2024-08-24T20:10:37.068391Z"
     }
    },
    "source": [
@@ -818,7 +836,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 39
+   "execution_count": 17
   },
   {
    "cell_type": "markdown",
@@ -831,8 +849,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:39:24.833758Z",
-     "start_time": "2024-08-23T15:39:24.459957Z"
+     "end_time": "2024-08-24T20:10:37.974623Z",
+     "start_time": "2024-08-24T20:10:37.597814Z"
     }
    },
    "source": [
@@ -866,7 +884,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 40
+   "execution_count": 18
   },
   {
    "cell_type": "markdown",
@@ -886,8 +904,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:39:24.838773Z",
-     "start_time": "2024-08-23T15:39:24.834783Z"
+     "end_time": "2024-08-24T20:10:37.979579Z",
+     "start_time": "2024-08-24T20:10:37.975624Z"
     }
    },
    "source": [
@@ -906,7 +924,7 @@
      ]
     }
    ],
-   "execution_count": 41
+   "execution_count": 19
   },
   {
    "cell_type": "markdown",
@@ -919,8 +937,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:39:24.844753Z",
-     "start_time": "2024-08-23T15:39:24.839758Z"
+     "end_time": "2024-08-24T20:10:38.230447Z",
+     "start_time": "2024-08-24T20:10:37.979579Z"
     }
    },
    "source": [
@@ -945,7 +963,7 @@
      ]
     }
    ],
-   "execution_count": 42
+   "execution_count": 20
   },
   {
    "cell_type": "markdown",
@@ -968,8 +986,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:39:24.850739Z",
-     "start_time": "2024-08-23T15:39:24.845726Z"
+     "end_time": "2024-08-24T20:10:38.771428Z",
+     "start_time": "2024-08-24T20:10:38.231445Z"
     }
    },
    "source": [
@@ -1000,7 +1018,7 @@
      ]
     }
    ],
-   "execution_count": 43
+   "execution_count": 21
   },
   {
    "cell_type": "markdown",
@@ -1030,8 +1048,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:39:24.963439Z",
-     "start_time": "2024-08-23T15:39:24.851734Z"
+     "end_time": "2024-08-24T20:10:38.869173Z",
+     "start_time": "2024-08-24T20:10:38.772430Z"
     }
    },
    "source": [
@@ -1054,7 +1072,7 @@
      ]
     }
    ],
-   "execution_count": 44
+   "execution_count": 22
   },
   {
    "cell_type": "markdown",
@@ -1069,8 +1087,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:39:25.199683Z",
-     "start_time": "2024-08-23T15:39:24.964433Z"
+     "end_time": "2024-08-24T20:10:38.965910Z",
+     "start_time": "2024-08-24T20:10:38.870180Z"
     }
    },
    "source": [
@@ -1092,7 +1110,7 @@
      ]
     }
    ],
-   "execution_count": 45
+   "execution_count": 23
   },
   {
    "cell_type": "markdown",
@@ -1107,8 +1125,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:39:27.027368Z",
-     "start_time": "2024-08-23T15:39:25.201678Z"
+     "end_time": "2024-08-24T20:10:39.708193Z",
+     "start_time": "2024-08-24T20:10:38.966908Z"
     }
    },
    "source": [
@@ -1136,7 +1154,7 @@
      ]
     }
    ],
-   "execution_count": 46
+   "execution_count": 24
   },
   {
    "cell_type": "markdown",
@@ -1161,8 +1179,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:39:27.805068Z",
-     "start_time": "2024-08-23T15:39:27.030360Z"
+     "end_time": "2024-08-24T20:10:39.922036Z",
+     "start_time": "2024-08-24T20:10:39.709180Z"
     }
    },
    "source": [
@@ -1191,7 +1209,7 @@
      ]
     }
    ],
-   "execution_count": 47
+   "execution_count": 25
   },
   {
    "cell_type": "markdown",
@@ -1206,8 +1224,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:39:28.202005Z",
-     "start_time": "2024-08-23T15:39:27.806064Z"
+     "end_time": "2024-08-24T20:10:40.165413Z",
+     "start_time": "2024-08-24T20:10:39.923033Z"
     }
    },
    "source": [
@@ -1227,7 +1245,7 @@
      ]
     }
    ],
-   "execution_count": 48
+   "execution_count": 26
   },
   {
    "cell_type": "markdown",
@@ -1241,8 +1259,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:39:28.416432Z",
-     "start_time": "2024-08-23T15:39:28.203002Z"
+     "end_time": "2024-08-24T20:10:40.373203Z",
+     "start_time": "2024-08-24T20:10:40.166409Z"
     }
    },
    "source": [
@@ -1262,7 +1280,7 @@
      ]
     }
    ],
-   "execution_count": 49
+   "execution_count": 27
   },
   {
    "cell_type": "markdown",
@@ -1279,8 +1297,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:39:32.956916Z",
-     "start_time": "2024-08-23T15:39:28.417429Z"
+     "end_time": "2024-08-24T20:10:42.245249Z",
+     "start_time": "2024-08-24T20:10:40.374158Z"
     }
    },
    "source": [
@@ -1318,14 +1336,14 @@
      ]
     }
    ],
-   "execution_count": 50
+   "execution_count": 28
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:39:36.543848Z",
-     "start_time": "2024-08-23T15:39:32.957914Z"
+     "end_time": "2024-08-24T20:10:43.664977Z",
+     "start_time": "2024-08-24T20:10:42.248241Z"
     }
    },
    "source": [
@@ -1360,7 +1378,7 @@
      ]
     }
    ],
-   "execution_count": 51
+   "execution_count": 29
   },
   {
    "cell_type": "markdown",
@@ -1384,8 +1402,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:39:39.107702Z",
-     "start_time": "2024-08-23T15:39:36.546842Z"
+     "end_time": "2024-08-24T20:10:45.612646Z",
+     "start_time": "2024-08-24T20:10:43.665974Z"
     }
    },
    "source": [
@@ -1424,14 +1442,14 @@
      ]
     }
    ],
-   "execution_count": 52
+   "execution_count": 30
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:39:40.270013Z",
-     "start_time": "2024-08-23T15:39:39.107702Z"
+     "end_time": "2024-08-24T20:10:46.134270Z",
+     "start_time": "2024-08-24T20:10:45.613643Z"
     }
    },
    "source": [
@@ -1466,7 +1484,7 @@
      ]
     }
    ],
-   "execution_count": 53
+   "execution_count": 31
   },
   {
    "cell_type": "markdown",
@@ -1481,8 +1499,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:39:40.397671Z",
-     "start_time": "2024-08-23T15:39:40.270986Z"
+     "end_time": "2024-08-24T20:10:46.273901Z",
+     "start_time": "2024-08-24T20:10:46.135266Z"
     }
    },
    "source": [
@@ -1509,7 +1527,7 @@
      ]
     }
    ],
-   "execution_count": 54
+   "execution_count": 32
   },
   {
    "cell_type": "markdown",
@@ -1528,8 +1546,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:39:48.069813Z",
-     "start_time": "2024-08-23T15:39:40.397671Z"
+     "end_time": "2024-08-24T20:10:52.968907Z",
+     "start_time": "2024-08-24T20:10:46.277855Z"
     }
    },
    "source": [
@@ -1555,7 +1573,7 @@
      ]
     }
    ],
-   "execution_count": 55
+   "execution_count": 33
   },
   {
    "cell_type": "markdown",
@@ -1568,8 +1586,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:39:49.249208Z",
-     "start_time": "2024-08-23T15:39:48.069813Z"
+     "end_time": "2024-08-24T20:10:54.833153Z",
+     "start_time": "2024-08-24T20:10:52.975890Z"
     }
    },
    "source": [
@@ -1594,7 +1612,7 @@
      ]
     }
    ],
-   "execution_count": 56
+   "execution_count": 34
   },
   {
    "cell_type": "markdown",
@@ -1607,8 +1625,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:39:51.242286Z",
-     "start_time": "2024-08-23T15:39:49.250175Z"
+     "end_time": "2024-08-24T20:10:57.631760Z",
+     "start_time": "2024-08-24T20:10:54.833153Z"
     }
    },
    "source": [
@@ -1627,7 +1645,7 @@
      ]
     }
    ],
-   "execution_count": 57
+   "execution_count": 35
   },
   {
    "cell_type": "markdown",
@@ -1640,8 +1658,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:40:00.996702Z",
-     "start_time": "2024-08-23T15:39:51.243283Z"
+     "end_time": "2024-08-24T20:10:59.337890Z",
+     "start_time": "2024-08-24T20:10:57.632758Z"
     }
    },
    "source": [
@@ -1663,7 +1681,7 @@
      ]
     }
    ],
-   "execution_count": 58
+   "execution_count": 36
   },
   {
    "cell_type": "markdown",
@@ -1678,8 +1696,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:40:01.207390Z",
-     "start_time": "2024-08-23T15:40:00.996702Z"
+     "end_time": "2024-08-24T20:10:59.584232Z",
+     "start_time": "2024-08-24T20:10:59.338888Z"
     }
    },
    "source": [
@@ -1701,14 +1719,14 @@
      ]
     }
    ],
-   "execution_count": 59
+   "execution_count": 37
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:40:01.212397Z",
-     "start_time": "2024-08-23T15:40:01.208384Z"
+     "end_time": "2024-08-24T20:10:59.590819Z",
+     "start_time": "2024-08-24T20:10:59.585229Z"
     }
    },
    "source": [
@@ -1723,19 +1741,19 @@
        "array([0.74206624, 0.80995157, 0.82157013, 0.72766196])"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 60
+   "execution_count": 38
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T15:40:01.362986Z",
-     "start_time": "2024-08-23T15:40:01.213371Z"
+     "end_time": "2024-08-24T20:10:59.742386Z",
+     "start_time": "2024-08-24T20:10:59.591789Z"
     }
    },
    "source": [
@@ -1757,7 +1775,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 61
+   "execution_count": 39
   },
   {
    "cell_type": "markdown",
