--- a/KDD-2024/Notebooks/part5_interval_based.ipynb
+++ b/KDD-2024/Notebooks/part5_interval_based.ipynb
@@ -60,6 +60,25 @@
    "id": "61e81a0fa94c9a4"
   },
   {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "!pip install aeon==0.11.0 torch\n",
+    "!mkdir -p data\n",
+    "!wget -nc https://raw.githubusercontent.com/aeon-tutorials/KDD-2024/main/Notebooks/data/KDD_MTSC_TRAIN.ts -P data/\n",
+    "!wget -nc https://raw.githubusercontent.com/aeon-tutorials/KDD-2024/main/Notebooks/data/KDD_MTSC_TEST.ts -P data/\n",
+    "!wget -nc https://raw.githubusercontent.com/aeon-tutorials/KDD-2024/main/Notebooks/data/KDD_UTSC_TRAIN.ts -P data/\n",
+    "!wget -nc https://raw.githubusercontent.com/aeon-tutorials/KDD-2024/main/Notebooks/data/KDD_UTSC_TEST.ts -P data/\n",
+    "!wget -nc https://raw.githubusercontent.com/aeon-tutorials/KDD-2024/main/Notebooks/data/KDD_MTSER_TRAIN.ts -P data/\n",
+    "!wget -nc https://raw.githubusercontent.com/aeon-tutorials/KDD-2024/main/Notebooks/data/KDD_MTSER_TEST.ts -P data/\n",
+    "!wget -nc https://raw.githubusercontent.com/aeon-tutorials/KDD-2024/main/Notebooks/data/KDD_UTSER_TRAIN.ts -P data/\n",
+    "!wget -nc https://raw.githubusercontent.com/aeon-tutorials/KDD-2024/main/Notebooks/data/KDD_UTSER_TEST.ts -P data/"
+   ],
+   "id": "b86bed9944692f1d"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-08-23T10:24:26.747282Z",
@@ -1317,7 +1336,9 @@
     "\n",
     "The QUANT interval classifier extracts multiple quantiles from a fixed set of dyadic intervals. The series is continuously halved, with the quantiles from each subseries concatenated to form a feature vector. For each set of intervals extracted, the window is shifted by half the interval length to extract more intervals. Like previous algorithms, multiple series representations are used. The feature extraction is performed on the first order differences, second order differences, and a Fourier transform of the input series along with the original series.\n",
     "\n",
-    "Currently, the QUANT classifier is only available for classification tasks. The `QUANTClassifier` class is an `aeon` classifier for the QUANT algorithm. A version for regression will soon be available."
+    "Currently, the QUANT classifier is only available for classification tasks. The `QUANTClassifier` class is an `aeon` classifier for the QUANT algorithm. A version for regression will soon be available.\n",
+    "\n",
+    "__Note:__ QUANT is implemented using `torch`. You will need to `pip install torch` to run this code."
    ],
    "id": "a808bf4461819427"
   },
