--- a/KDD-2024/Notebooks/part6_dictionary_based.ipynb
+++ b/KDD-2024/Notebooks/part6_dictionary_based.ipynb
@@ -44,6 +44,24 @@
    ]
   },
   {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "!pip install aeon==0.11.0\n",
+    "!mkdir -p data\n",
+    "!wget -nc https://raw.githubusercontent.com/aeon-tutorials/KDD-2024/main/Notebooks/data/KDD_MTSC_TRAIN.ts -P data/\n",
+    "!wget -nc https://raw.githubusercontent.com/aeon-tutorials/KDD-2024/main/Notebooks/data/KDD_MTSC_TEST.ts -P data/\n",
+    "!wget -nc https://raw.githubusercontent.com/aeon-tutorials/KDD-2024/main/Notebooks/data/KDD_UTSC_TRAIN.ts -P data/\n",
+    "!wget -nc https://raw.githubusercontent.com/aeon-tutorials/KDD-2024/main/Notebooks/data/KDD_UTSC_TEST.ts -P data/\n",
+    "!wget -nc https://raw.githubusercontent.com/aeon-tutorials/KDD-2024/main/Notebooks/data/KDD_MTSER_TRAIN.ts -P data/\n",
+    "!wget -nc https://raw.githubusercontent.com/aeon-tutorials/KDD-2024/main/Notebooks/data/KDD_MTSER_TEST.ts -P data/\n",
+    "!wget -nc https://raw.githubusercontent.com/aeon-tutorials/KDD-2024/main/Notebooks/data/KDD_UTSER_TRAIN.ts -P data/\n",
+    "!wget -nc https://raw.githubusercontent.com/aeon-tutorials/KDD-2024/main/Notebooks/data/KDD_UTSER_TEST.ts -P data/"
+   ]
+  },
+  {
    "cell_type": "code",
    "metadata": {
     "collapsed": true,
@@ -688,8 +706,7 @@
     "mrsqm_preds = mrsqm.predict(X_test_c)\n",
     "accuracy_score(y_test_c, mrsqm_preds)"
    ],
-   "outputs": [
-   ],
+   "outputs": [],
    "execution_count": 13
   },
   {
