--- a/KDD-2024/Notebooks/part9_hybrids.ipynb
+++ b/KDD-2024/Notebooks/part9_hybrids.ipynb
@@ -1,13 +1,9 @@
 {
  "cells": [
   {
+   "metadata": {},
    "cell_type": "markdown",
-   "source": [
-    "`KDD2024 Tutorial / A Hands-On Introduction to Time Series Classification and Regression`"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   "source": "`KDD2024 Tutorial / A Hands-On Introduction to Time Series Classification and Regression`"
   },
   {
    "cell_type": "markdown",
@@ -27,40 +23,40 @@
    "outputs": [],
    "execution_count": null,
    "source": [
+    "!pip install aeon==0.11.0\n",
+    "!mkdir -p data\n",
+    "!wget -nc https://raw.githubusercontent.com/aeon-tutorials/KDD-2024/main/Notebooks/data/KDD_MTSC_TRAIN.ts -P data/\n",
+    "!wget -nc https://raw.githubusercontent.com/aeon-tutorials/KDD-2024/main/Notebooks/data/KDD_MTSC_TEST.ts -P data/\n",
+    "!wget -nc https://raw.githubusercontent.com/aeon-tutorials/KDD-2024/main/Notebooks/data/KDD_UTSC_TRAIN.ts -P data/\n",
+    "!wget -nc https://raw.githubusercontent.com/aeon-tutorials/KDD-2024/main/Notebooks/data/KDD_UTSC_TEST.ts -P data/\n",
+    "!wget -nc https://raw.githubusercontent.com/aeon-tutorials/KDD-2024/main/Notebooks/data/KDD_MTSER_TRAIN.ts -P data/\n",
+    "!wget -nc https://raw.githubusercontent.com/aeon-tutorials/KDD-2024/main/Notebooks/data/KDD_MTSER_TEST.ts -P data/\n",
+    "!wget -nc https://raw.githubusercontent.com/aeon-tutorials/KDD-2024/main/Notebooks/data/KDD_UTSER_TRAIN.ts -P data/\n",
+    "!wget -nc https://raw.githubusercontent.com/aeon-tutorials/KDD-2024/main/Notebooks/data/KDD_UTSER_TEST.ts -P data/"
+   ]
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-24T20:36:07.659539Z",
+     "start_time": "2024-08-24T20:36:07.656001Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
     "# There are some deprecation warnings present in the notebook, we will ignore them.\n",
     "# Remove this cell if you are interested in finding out what is changing soon, for\n",
     "# aeon there will be big changes in out v1.0.0 release!\n",
     "import warnings\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Single channel EEG TSC problem train shape: (40, 1, 100)\n",
-      "Single channel EEG TSC problem test shape: (40, 1, 100)\n",
-      "Four channel EEG TSC problem train shape: (40, 4, 100)\n",
-      "Single channel EEG TSC problem test shape: (40, 4, 100)\n",
-      "Single channel EEG TSER problem train shape: (40, 1, 100)\n",
-      "Single channel EEG TSER problem test shape: (40, 1, 100)\n",
-      "Four channel EEG TSER problem train shape: (72, 4, 100)\n",
-      "Single channel EEG TSER problem test shape: (72, 4, 100)\n"
-     ]
-    }
-   ],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "trainX = np.random.random((20,3, 100)) # Random collection of 20 series, each with 3 channels and 100 timepoints\n",
-    "train_labels = np.random.randint(0, 2, 20) # Random labels\n",
-    "train_target = np.random.random(20) # Random regression target\n",
-    "\n",
     "# load EEG example here\n",
     "from aeon.datasets import load_from_tsfile\n",
     "\n",
@@ -90,11 +86,32 @@
     "X_test_mtser, y_test_mtser = load_from_tsfile(\"./data/KDD_MTSER_TEST.ts\")\n",
     "\n",
     "print(\"Four channel EEG TSER problem train shape:\", X_train_mtser.shape)\n",
-    "print(\"Single channel EEG TSER problem test shape:\", X_test_mtser.shape)\n"
+    "print(\"Single channel EEG TSER problem test shape:\", X_test_mtser.shape)"
    ],
    "metadata": {
-    "collapsed": false
-   }
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-08-24T20:36:07.755947Z",
+     "start_time": "2024-08-24T20:36:07.660536Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Single channel EEG TSC problem train shape: (40, 1, 100)\n",
+      "Single channel EEG TSC problem test shape: (40, 1, 100)\n",
+      "Four channel EEG TSC problem train shape: (40, 4, 100)\n",
+      "Single channel EEG TSC problem test shape: (40, 4, 100)\n",
+      "Single channel EEG TSER problem train shape: (40, 1, 100)\n",
+      "Single channel EEG TSER problem test shape: (40, 1, 100)\n",
+      "Four channel EEG TSER problem train shape: (72, 4, 100)\n",
+      "Single channel EEG TSER problem test shape: (72, 4, 100)\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -108,23 +125,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Single channel EEG TSC problem accuracy: 0.55\n",
-      "STC weight = 0.586181640625\n",
-      "DrCIF weight = 0.8145062499999999\n",
-      "Arsenal weight = 0.7320941406250001\n",
-      "TDE weight = 0.4632503906249999\n"
-     ]
-    }
-   ],
    "source": [
     "from aeon.classification.hybrid import HIVECOTEV2\n",
-    "hc2 = HIVECOTEV2(n_jobs  = -1, time_limit_in_minutes=2)\n",
+    "hc2 = HIVECOTEV2(n_jobs =-1, time_limit_in_minutes=2)\n",
     "hc2.fit(X_train_utsc, y_train_utsc)\n",
     "print(\"Single channel EEG TSC problem accuracy:\", hc2.score(X_test_utsc, y_test_utsc))\n",
     "print(\"STC weight = \" + str(hc2.stc_weight_))\n",
@@ -133,8 +136,26 @@
     "print(\"TDE weight = \" + str(hc2.tde_weight_))"
    ],
    "metadata": {
-    "collapsed": false
-   }
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-08-24T20:37:34.585338Z",
+     "start_time": "2024-08-24T20:36:07.757241Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Single channel EEG TSC problem accuracy: 0.675\n",
+      "STC weight = 1.0\n",
+      "DrCIF weight = 1.0\n",
+      "Arsenal weight = 0.7320941406250001\n",
+      "TDE weight = 0.586181640625\n"
+     ]
+    }
+   ],
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -150,16 +171,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Some ensemble accuracy: 0.85\n"
-     ]
-    }
-   ],
    "source": [
     "from aeon.classification import DummyClassifier\n",
     "from aeon.classification.convolution_based import RocketClassifier\n",
@@ -172,8 +183,22 @@
     "print(\"Some ensemble accuracy:\", ens.score(X_test_utsc, y_test_utsc))"
    ],
    "metadata": {
-    "collapsed": false
-   }
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-08-24T20:38:00.397133Z",
+     "start_time": "2024-08-24T20:37:34.586336Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Some ensemble accuracy: 0.85\n"
+     ]
+    }
+   ],
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
