--- a/KDD-2024/Notebooks/part1_introduction.ipynb
+++ b/KDD-2024/Notebooks/part1_introduction.ipynb
@@ -113,6 +113,9 @@
     "ExecuteTime": {
      "end_time": "2024-08-19T22:25:03.804650Z",
      "start_time": "2024-08-19T22:25:03.781673Z"
+    },
+    "pycharm": {
+     "is_executing": true
     }
    },
    "cell_type": "code",
@@ -122,19 +125,10 @@
     "X_test_mtsc, y_test_mtsc = load_from_tsfile(\"./data/KDD_MTSC_TEST.ts\")\n",
     "\n",
     "print(\"Four channel EEG TSC problem train shape:\", X_train_mtsc.shape)\n",
-    "print(\"Single channel EEG TSC problem test shape:\", X_test_mtsc.shape)"
+    "print(\"Four channel EEG TSC problem test shape:\", X_test_mtsc.shape)"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Four channel EEG TSC problem train shape: (40, 4, 100)\n",
-      "Single channel EEG TSC problem test shape: (40, 4, 100)\n"
-     ]
-    }
-   ],
-   "execution_count": 6
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {
